<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/setting_background"
            android:layout_width="411dp"
            android:layout_height="731dp"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/background" />

        <TextView
            android:id="@+id/realtime_text"
            android:layout_width="166dp"
            android:layout_height="44dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="62dp"
            android:fontFamily="@font/arial"
            android:text="@string/realtime_text_string"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginLeft="40dp" />

        <Button
            android:id="@+id/passcode_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="118dp"
            android:backgroundTint="@color/darkblue"
            android:textAllCaps="false"
            android:fontFamily="@font/arial"
            android:text="@string/passcode_string"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="182dp"
            android:backgroundTint="@color/darkblue"
            android:fontFamily="@font/arial"
            android:text="@string/delete_btn_string"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/realtime_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="290dp"
            android:layout_marginLeft="335dp"
            android:layout_marginTop="62dp"
            android:thumb="@drawable/thumb"
            app:showText="false"
            app:track="@drawable/track" />

        <Button
            android:id="@+id/logout_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/darkblue"
            android:layout_marginTop="246dp"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/arial"
            android:text="@string/logout_btn_string"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            />
    </FrameLayout>
</ScrollView>