<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

  <ScrollView
      android:id="@+id/login_activity"
      android:layout_width="wrap_content"
      android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/content_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <ImageView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:src="@drawable/layout_login1"
          android:layout_marginTop="518dp"
          android:contentDescription="@string/layout_login"
          />

      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:contentDescription="@string/layout_login1"
          android:src="@drawable/layout_register" />

      <ProgressBar
          android:id="@+id/progress"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:visibility="gone"
          android:layout_gravity="center"
          android:layout_marginTop="70dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/password" />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:fontFamily="@font/arial"
          android:gravity="center"
          android:text="Doorry"
          android:textColor="@color/login_btn_color"
          android:textSize="40sp"
          android:textStyle="bold"
          app:layout_constraintBottom_toTopOf="@id/userinput"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          android:layout_marginTop="50sp"
          />


      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="118sp"
          android:fontFamily="@font/arial"
          android:gravity="center"
          android:text="@string/create_account"
          android:textColor="@color/white"
          android:textSize="35sp"
          android:textStyle="bold"
          app:layout_constraintBottom_toTopOf="@id/userinput"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/userinput"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:layout_marginTop="188dp"
          android:layout_marginLeft="30dp"
          android:layout_marginRight="30dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          android:background="@drawable/username_field_shape"
          >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_marginTop="5dp"
            android:hint="@string/username"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:fontFamily="@font/arial"
            android:background="@android:color/transparent"
            android:layout_marginStart="20dp" />

      </com.google.android.material.textfield.TextInputLayout>


      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/pass"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:layout_marginLeft="30dp"
          android:layout_marginTop="264dp"
          android:layout_marginRight="30dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/userinput"
          android:background="@drawable/username_field_shape"
          >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:hint="@string/password"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:fontFamily="@font/arial"
            android:layout_marginStart="20dp" />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/passcode_field"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:layout_marginLeft="30dp"
          android:layout_marginTop="344dp"
          android:layout_marginRight="30dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/userinput"
          android:background="@drawable/username_field_shape"
          >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/door_passcode"
            android:layout_width="match_parent"
            android:hint="@string/door_string"
            android:layout_height="35dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_door"
            android:fontFamily="@font/arial"
            android:layout_marginStart="20dp" />
      </com.google.android.material.textfield.TextInputLayout>

      <Button
          android:id="@+id/buttonSignUp"
          style="@style/Widget.AppCompat.Button.Colored"
          android:layout_width="227dp"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginTop="124dp"
          android:background="@drawable/login_btn_shape"
          android:text="@string/signup"
          android:fontFamily="@font/arial"
          app:backgroundTint="@color/login_btn_color"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/password" />

      <TextView
          android:id="@+id/loginText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="188dp"
          android:fontFamily="@font/arial"
          android:text="@string/loginhere"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.498"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/loginbtn"
          android:layout_gravity="center"
          tools:targetApi="jelly_bean" />

      <ImageView
          android:layout_width="60dp"
          android:layout_height="50dp"
          android:layout_marginTop="598dp"
          android:src="@drawable/logo" />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:fontFamily="@font/arial"
          android:text="© 2021 GMI. All Rights Reserved."
          android:textSize="15sp"
          android:layout_marginLeft="60dp"
          android:layout_marginTop="616dp"
          android:layout_marginStart="60dp" />

    </FrameLayout>
  </ScrollView>
</HorizontalScrollView>