<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <ScrollView
        android:id="@+id/login_activity"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/content_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/layout_login1"
                android:layout_marginTop="516dp"
                android:contentDescription="@string/layout_login"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/layout_login1"
                android:src="@drawable/layout_login" />

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="center"
                android:layout_marginTop="70dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arial"
                android:gravity="center"
                android:text="Doorry"
                android:textColor="@color/login_btn_color"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/userinput"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="75sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arial"
                android:gravity="center"
                android:text="@string/login_account"
                android:textColor="@color/bgColor"
                android:textSize="35sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/userinput"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="150sp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userinput"
                android:layout_width="match_parent"

                android:layout_height="50dp"
                android:layout_marginTop="230dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/username_field_shape"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="37dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:hint="@string/username"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_baseline_person_24"
                    android:drawableLeft="@drawable/ic_baseline_person_24"
                    android:fontFamily="@font/arial" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="310dp"
                android:layout_marginRight="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/userinput"
                android:background="@drawable/username_field_shape"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pass"
                    android:layout_width="match_parent"
                    android:hint="@string/password"
                    android:layout_height="35dp"
                    android:layout_marginLeft="20dp"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawableLeft="@drawable/ic_baseline_lock_24"
                    android:fontFamily="@font/arial"
                    android:inputType="textPassword"
                    android:layout_marginStart="20dp" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/loginbtn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="227dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:layout_marginTop="398dp"
                android:background="@drawable/login_btn_shape"
                android:fontFamily="@font/arial"
                android:text="@string/login"
                app:backgroundTint="@color/login_btn_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password" />

            <TextView
                android:id="@+id/signUpText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="490dp"
                android:layout_marginStart="106dp"
                android:fontFamily="@font/arial"
                android:text="@string/signuphere"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginbtn"
                tools:targetApi="jelly_bean" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:src="@drawable/logo"
                android:layout_marginTop="610dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arial"
                android:text="© 2021 GMI. All Rights Reserved."
                android:textSize="15sp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="630dp"
                android:layout_marginStart="60dp" />

        </FrameLayout>
    </ScrollView>
</HorizontalScrollView>